--- a/MSMulticastDelegate/MSMulticastDelegate/MSMulticastDelegate.1
+++ b/MSMulticastDelegate/MSMulticastDelegate/MSMulticastDelegate.1
@@ -4,10 +4,10 @@
 .\"man mdoc for the short list of editing options
 .\"/usr/share/misc/mdoc.template
 .Dd 19/03/14               \" DATE 
-.Dt MSProxyListener 1      \" Program name and manual section number 
+.Dt MSMulticastDelegate 1      \" Program name and manual section number
 .Os Darwin
 .Sh NAME                 \" Section Header - required - don't modify 
-.Nm MSProxyListener,
+.Nm MSMulticastDelegate,
 .\" The following lines are read in generating the apropos(man -k) database. Use only key
 .\" words here as the database is built based on the words here and in the .ND line. 
 .Nm Other_name_for_same_program(),
